# mcp-rig

./: .env.example  .gitignore  Cargo.toml  README.md
crates/mcp-agent/: Cargo.toml
crates/mcp-agent/examples/: direct.rs  rig.rs
crates/mcp-rig/: Cargo.toml  README.md
crates/mcp-rig/examples/: agent.rs  agent_autonomous.rs  agent_evaluator_optimizer.rs  agent_orchestrator.rs  agent_parallelization.rs  agent_prompt_chaining.rs  agent_routing.rs  agent_with_context.rs  agent_with_deepseek.rs  agent_with_galadriel.rs  agent_with_grok.rs  agent_with_hyperbolic.rs  agent_with_loaders.rs  agent_with_moonshot.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  anthropic_streaming.rs  anthropic_streaming_with_tools.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  extractor_with_deepseek.rs  gemini_agent.rs  gemini_embeddings.rs  image.rs  loaders.rs  multi_agent.rs  multi_extract.rs  multi_turn_agent.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
crates/mcp-rig/rig-core-derive/src/: embed.rs
crates/mcp-rig/src/: agent.rs  extractor.rs  lib.rs  tool.rs
crates/mcp-rig/src/completion/: request.rs
crates/mcp-rig/src/embeddings/: builder.rs  embed.rs  tool.rs
crates/mcp-rig/src/pipeline/: conditional.rs  mod.rs  op.rs  try_op.rs
crates/mcp-rig/src/providers/: azure.rs  cohere.rs  deepseek.rs  galadriel.rs  hyperbolic.rs  mod.rs  moonshot.rs  openai.rs  perplexity.rs
crates/mcp-rig/tests/: embed_macro.rs
(+7 files in other folders)
