[package]
name = "examples"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait = "0.1.83"
thiserror = "2.0.3"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mcp-core = "0.1.0"
mcp_rig = { path = "../mcp-rig" }
url = "2.5.4"
anyhow = "1.0.95"
dotenv = "0.15.0"
clap = "4.5.30"
